# comet

./: .gitignore  AGENTS.md  README.md  pyproject.toml
diagnostics/: experiment_finetune_from_best_lr5e5.py  measure_phase_distribution.py  summarize_predictions.py
diagnostics/phase_epoch9_predictions/: clip_0000.metadata.json  clip_0003.metadata.json  clip_0004.metadata.json
src/comet_audio/: __init__.py  __main__.py  assets.py  cli.py  comet_visualizer.html  dawdreamer_renderer.py  dsp.py  generate_dataset.py  generator.py  inference.py  models.py  training.py
tests/: test_generator.py  test_training.py
